--- a/content/2026-02-24-practise.md
+++ b/content/2026-02-24-practise.md
@@ -1,3 +1,9 @@
+---
+title: "Pattern wise practise Part I"
+date: "2026-02-25"
+tags: ["leetcode", "daily practise questions"]
+
+---
 # Problem 1 : **Two Pointers:** Container With Most Water (https://leetcode.com/problems/container-with-most-water/)
 
 ## Rephrase problem
