--- a/content/2026-02-24-practise.md
+++ b/content/2026-02-24-practise.md
@@ -1,7 +1,7 @@
 ---
 title: "Pattern wise practise Part I"
 date: "2026-02-25"
-tags: ["leetcode", "daily practise questions"]
+tags: ["leetcode", "daily practise questions","Two Pointers","Sliding window","Fast-slow"]
 
 ---
 # Problem 1 : **Two Pointers:** Container With Most Water (https://leetcode.com/problems/container-with-most-water/)
