--- a/content/2026-02-26-DNS.md
+++ b/content/2026-02-26-DNS.md
@@ -15,3 +15,35 @@ summary: "Details learning of DNS"
 5. Caching & TTL: How performance is optimized and the trade-offs involved.
 6. Advanced/Systems Design Concepts: DNS routing (Anycast, Round Robin) and Security (DNSSEC).
 ```
+
+## Topic 1 : Core purpose & Function
+
+When we want to access the website, we provide readable domain name like google.com and browser and network routers convert it into Internet protocol (IP) like 142.250.190.46 .
+
+**Why this abstraction is needed?**
+
+A company or person can change its underlying physical servers, move to cloud provider or update its IP addresses. and we can map it with same domain name.
+
+>If a user types a URL into their browser, but the DNS system completely fails to resolve the domain name to an IP address, what specific behavior will the user experience, and does this indicate that the target website's actual web servers are down?
+> If DNS fails completely, it means browser not able to find the page.It show browser level network like ERR_NAME_NOT_RESOLVED or the site can't be reached.
+
+
+## Topic 2 : The DNS Hierarchy
+
+```mermaid
+sequenceDiagram
+    participant User as User / Browser
+    participant Resolver as DNS Resolver
+    participant Root as Root Server (.)
+    participant TLD as TLD Server (.com)
+    participant Auth as Authoritative Server (google.com)
+
+    User->>Resolver: 1. Query: IP for google.com?
+    Resolver->>Root: 2. Query: Who handles .com?
+    Root-->>Resolver: 3. Response: Ask this .com TLD Server
+    Resolver->>TLD: 4. Query: Who handles google.com?
+    TLD-->>Resolver: 5. Response: Ask this Authoritative Server
+    Resolver->>Auth: 6. Query: IP for google.com?
+    Auth-->>Resolver: 7. Response: 142.250.190.46
+    Resolver-->>User: 8. Response: 142.250.190.46
+```
