--- a/content/2026-02-24-practise.md
+++ b/content/2026-02-24-practise.md
@@ -2,7 +2,7 @@
 title: "Pattern wise practise Part I"
 date: "2026-02-25"
 tags: ["leetcode", "daily practise questions","Two Pointers","Sliding window","Fast-slow"]
-
+category: "Coding"
 ---
 # Problem 1 : **Two Pointers:** Container With Most Water (https://leetcode.com/problems/container-with-most-water/)
 
