--- a/content/2026-02-26-DNS.md
+++ b/content/2026-02-26-DNS.md
@@ -3,6 +3,7 @@ title: "Domain Name System(DNS)"
 date: "2026-02-26"
 tags: ["HLD", "Networking & Communication"]
 summary: "Details learning of DNS"
+category: "HLD"
 ---
 
 # Domain Name System
