--- a/content/2026-02-26-HLD.md
+++ b/content/2026-02-26-HLD.md
@@ -3,6 +3,7 @@ title: "HLD Interview Topics"
 date: "2026-02-26"
 tags: ["System design", "HLD"]
 summary: "Fundamental of all HLD rounds"
+pinned: true
 ---
 
 ## Topics
