--- a/content/2026-02-27-practise.md
+++ b/content/2026-02-27-practise.md
@@ -2,7 +2,7 @@
 title: "Pattern wise practise 27 feb"
 date: "2026-02-27"
 tags: ["leetcode", "daily practise questions","Monotonic Stack"]
-
+category: "Coding"
 ---
 
 ## Problem 1:
