--- a/content/2026-02-28-practise.md
+++ b/content/2026-02-28-practise.md
@@ -2,7 +2,7 @@
 title: "Pattern wise practise 28 feb"
 date: "2026-02-28"
 tags: ["leetcode", "daily practise questions","Hashmap"]
-
+category: "Coding"
 ---
 
 # Problem 1 
