--- a/content/2026-02-25-leetcode-1336.md
+++ b/content/2026-02-25-leetcode-1336.md
@@ -3,6 +3,7 @@ title: "1356. Sort Integers by the Number of 1 Bits"
 date: "2026-02-25"
 tags: ["leetcode", "daily"]
 summary: "Problem link : https://leetcode.com/problems/sort-integers-by-the-number-of-1-bits/"
+category: "Coding"
 ---
 
 # Problem
