--- a/content/2026-02-26-DNS.md
+++ b/content/2026-02-26-DNS.md
@@ -4,6 +4,13 @@ date: "2026-02-26"
 tags: ["HLD", "Networking & Communication"]
 summary: "Details learning of DNS"
 category: "HLD"
+sessions:
+  - date: "2026-02-26"
+    startTime: "10:00"
+    endTime: "10:05"
+  - date: "2026-02-27"
+    startTime: "18:00"
+    endTime: "19:33"
 ---
 
 # Domain Name System
@@ -17,34 +24,66 @@ category: "HLD"
 6. Advanced/Systems Design Concepts: DNS routing (Anycast, Round Robin) and Security (DNSSEC).
 ```
 
-## Topic 1 : Core purpose & Function
-
-When we want to access the website, we provide readable domain name like google.com and browser and network routers convert it into Internet protocol (IP) like 142.250.190.46 .
-
-**Why this abstraction is needed?**
-
-A company or person can change its underlying physical servers, move to cloud provider or update its IP addresses. and we can map it with same domain name.
-
->If a user types a URL into their browser, but the DNS system completely fails to resolve the domain name to an IP address, what specific behavior will the user experience, and does this indicate that the target website's actual web servers are down?
-> If DNS fails completely, it means browser not able to find the page.It show browser level network like ERR_NAME_NOT_RESOLVED or the site can't be reached.
-
-
-## Topic 2 : The DNS Hierarchy
-
+1. DNS is internet directory. 
+2. It translates human-readable domain name into IP address (such as google.com to machine readable IP address like 93.184.296.34 example)
 ```mermaid
 sequenceDiagram
-    participant User as User / Browser
-    participant Resolver as DNS Resolver
-    participant Root as Root Server (.)
-    participant TLD as TLD Server (.com)
-    participant Auth as Authoritative Server (google.com)
-
-    User->>Resolver: 1. Query: IP for google.com?
-    Resolver->>Root: 2. Query: Who handles .com?
-    Root-->>Resolver: 3. Response: Ask this .com TLD Server
-    Resolver->>TLD: 4. Query: Who handles google.com?
-    TLD-->>Resolver: 5. Response: Ask this Authoritative Server
-    Resolver->>Auth: 6. Query: IP for google.com?
-    Auth-->>Resolver: 7. Response: 142.250.190.46
-    Resolver-->>User: 8. Response: 142.250.190.46
+    participant  browser 
+    participant  DNS Resolver
+    
+    browser ->> DNS Resolver : www.google.com
+    DNS Resolver ->> browser : 93.184.216.34
+    
 ```
+3. How does DNS Work?
+```mermaid
+sequenceDiagram
+    autonumber
+    actor U as User
+    participant B as Browser
+    participant OS as Operating System
+    participant Res as ISP DNS Resolver
+    participant Root as Root Nameserver (.)
+    participant TLD as TLD Nameserver (.com)
+    participant Auth as Auth Nameserver (google.com)
+
+    U->>B: Types www.google.com
+
+    rect rgb(240, 248, 255)
+        Note over B, OS: 1. Local Caching Phase
+        B->>B: Check Browser Cache
+        B->>OS: Cache Miss? Ask OS (gethostbyname)
+        OS->>OS: Check OS Cache (hosts file / DNS client)
+    end
+
+    rect rgb(245, 245, 245)
+        Note over OS, Res: 2. Recursive Query Phase
+        OS->>Res: Cache Miss? Send DNS Query to ISP
+        Res->>Res: Check Resolver Cache
+    end
+
+    rect rgb(255, 240, 245)
+        Note over Res, Auth: 3. Iterative Query Phase
+        Res->>Root: Where is www.google.com?
+        Root-->>Res: Ask the .com TLD server (IP provided)
+
+        Res->>TLD: Where is www.google.com?
+        TLD-->>Res: Ask Google's Auth server (IP provided)
+
+        Res->>Auth: What is the IP for www.google.com?
+        Auth-->>Res: The IP is 142.250.190.4
+    end
+
+    rect rgb(240, 255, 240)
+        Note over B, Res: 4. Response & Caching Phase
+        Res->>Res: Save IP to cache (respect TTL)
+        Res-->>OS: Return IP address
+        OS->>OS: Save IP to cache
+        OS-->>B: Return IP address
+        B->>B: Save IP to cache
+    end
+
+    B->>U: Connects to IP & renders page
+```
+
+
