--- a/content/2026-02-28-practise.md
+++ b/content/2026-02-28-practise.md
@@ -1,8 +1,13 @@
 ---
 title: "Pattern wise practise 28 feb"
 date: "2026-02-28"
-tags: ["leetcode", "daily practise questions","Hashmap"]
+tags: ["leetcode", "daily practise questions","Hashmap","Graph"]
 category: "Coding"
+sessions:
+  - date: "2026-03-01"
+    startTime: "08:30"
+    endTime: "02:40"
+---
 ---
 
 # Problem 1 
@@ -94,3 +99,145 @@ class Solution{
     }
 }
 ```
+
+# Problem 2
+
+>**Graph BFS:** [Rotting Oranges](https://leetcode.com/problems/rotting-oranges/)
+
+**Rephrase problem**
+Given mxn grid -> 2D array , 0->empty , 1->fresh oranges , 2->rotten oranges
+
+every min, any fresh orange that in up, down, left, right adjacent to a rotten orange becomes rotten 
+
+return min number of minutes that must elapse until no cell has a fresh orange , if not possible -1;
+
+**Examples**
+```text
+[2,1,1]
+[1,1,0]
+[0,1,1]
+
+1 min 
+[2 2 1]
+[2 1 0]
+[0 1 1]
+
+2 min
+[2 2 2]
+[2 2 0]
+[2 1 1]
+
+3 min
+[2 2 2]
+[2 2 0]
+[2 2 1]
+
+4 min
+[2 2 2 ]
+[2 2 0]
+[2 2 2]
+```
+
+**Intuition**
+```text
+[2 1 1]
+[0 1 1]
+[1 0 1]
+
+find first rotten
+grid[0][0] 
+q =[(0,0)]
+visited[0][0] =true
+
+run while loop till empty
+Pair = r=0, c=0
+count=1
+check in 4-directions
+r=0,c=1 (val=1) -> rotton -> put it in queue (0,1) -> marked visited
+r=1, c=0 (val=0) -> empty -> marked visited
+
+queue is not empty
+Pair => r=0, c=1
+count=2
+check in 4 direction
+r=0, c=2 -> rotten -> put in the queue(0,2) -> marked visited
+r=1, c=1 -> rotten -> put in the queue (1,1) -> marked visited
+r=0,c=0 -> already visited 
+
+queue is not empty
+Pair => r=0, c=2 
+check in 4-direction
+
+
+
+
+
+```
+
+>NOTE -> It is multisource spread 
+
+```text
+First count the all fresh oranges and add all rotten oranges in queues
+
+[2 1 1]
+[1 1 0]
+[0 1 1]
+
+freshOranges = 6
+q =[(0,0)]
+
+Do BFS traversal level by level
+
+```
+
+```java
+import java.util.LinkedList;
+
+class Solution {
+    public int orangesRotting(int[][] grid) {
+        int freshOranges = 0;
+        int mins = 0;
+        int n = grid.length;
+        int m = grid[0].length;
+        
+
+        Queue<int[]> q = new LinkedList<>();
+
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < m; j++) {
+                if (grid[i][j] == 1) freshOranges++;
+                if(grid[i][j]==2) q.add(new int[]{i,j});
+             }
+        }
+        
+        int[][] dir = {{0,1},{0,-1},{1,0},{-1,0}};
+        
+        while(!q.isEmpty()){
+            int size = q.poll();
+            boolean rotten = false;
+            
+            for(int i=0;i<size;i++){
+                int[] curr = q.poll();
+                int r = curr[0];
+                int c = curr[1];
+                
+                for(int[] d : dir){
+                    int nr = r + d[0];
+                    int nc = c + d[1];
+                    
+                    if(nr>=0 && nr<rows && nc>=0 && nc<cols && grid[nr][nc]==1){
+                        grid[nr][cr]=2;
+                        freshOranges--;
+                        q.add(new int[]{nr,nc});
+                        rotten=false;
+                    }
+                }
+            }
+            if(rotten) mins++;
+        }
+        return freshOranges==0? mins:-1;
+    }
+}
+```
+
+
