Zigzag level order

--- a/content/2026-02-28-practise.md
+++ b/content/2026-02-28-practise.md
@@ -1,12 +1,15 @@
 ---
 title: "Pattern wise practise 28 feb"
 date: "2026-03-01"
-tags: ["leetcode", "daily practise questions","Hashmap","Graph"]
+tags: ["leetcode", "daily practise questions","Hashmap","Graph","Tree"]
 category: "Coding"
 sessions:
   - date: "2026-03-01"
     startTime: "08:30"
     endTime: "09:35"
+  - date: "2026-03-01"
+    startTime: "13:00"
+    endTime: "13:30"  
 ---
 ---
 
@@ -236,6 +239,119 @@ class Solution {
             if(rotten) mins++;
         }
         return freshOranges==0? mins:-1;
+    }
+}
+```
+
+# Problem 3
+>**Tree BFS:** [Binary Tree ZigZag Level Order Traversal](https://leetcode.com/problems/binary-tree-zigzag-level-order-traversal/)
+
+**Rephrase problem**
+
+Given a root of a binary tree, zigzag level order
+
+```mermaid
+graph
+    A((3)) --> B((9))
+    A --> C((20))
+    C --> D((15))
+    C --> E((7))
+
+```
+
+```text
+Input: root [3,9,20,null,null,15,7]
+Output : [[3],[20,9],[15,7]]
+```
+
+**Brute force**
+level order traversal
+1. do the level order -> and then for the odd index of the list reverse the list
+
+```java
+import java.util.ArrayList;
+import java.util.Collections;
+
+public class TreeNode {
+    int val;
+    TreeNode left;
+    TreeNode right;
+
+    TreeNode() {
+    }
+
+    TreeNode(int val) {
+        this.val;
+    }
+
+    TreeNode(int val, TreeNode left, TreeNode right) {
+        this.val = val;
+        this.right = right;
+        this.left = left;
+    }
+}
+
+class Solution {
+    public List<List<Integer>> zigzagLevelOrder(TreeNode root) {
+        List<List<Integer>> result = new ArrayList<>();
+        if (root == null) return result;
+
+        Queue<TreeNode> q = new LinkedList<>();
+        q.add(root);
+        int level = 0;
+
+        while (!q.isEmpty()) {
+            int size = q.size();
+            level++;
+            List<Integer> ans = new ArrayList<>();
+            for (int i = 0; i < size; i++) {
+                TreeNode curr = q.poll();
+                ans.add(curr.val);
+                if (curr.left != null) q.offer(curr.left);
+                if (curr.right != null) q.offer(curr.right);
+            }
+            result.add(new ArrayList<>(ans));
+        }
+
+        for (int i = 0; i < result.size(); i++) {
+            if (i % 2 == 1) {
+                Collections.reverse(result.get(i));
+            }
+        }
+        return result;
+    }
+}
+```
+
+```java
+import java.util.ArrayList;
+import java.util.LinkedList;
+
+class Solution {
+    public List<List<Integer>> zigzagLevelOrder(TreeNode root) {
+        List<List<Integer>> result = new ArrayList<>();
+        if (root == null) return result;
+        Queue<TreeNode> q = new LinkedList<>();
+        q.offer(root);
+        boolean leftToRight=true;
+        while(!q.isEmpty()){
+            int size = q.size();
+            Deque<Integer> level = new Deque<>();
+            
+            for(int i=0;i<size;i++){
+                TreeNode curr= q.poll();
+                if(leftToRight){
+                    level.addLast(curr.val);
+                }else{
+                    level.addFirst(curr.val);
+                }
+                if(curr.left!=null) q.offer(curr.left);
+                if(curr.right!=null) q.offer(curr.right);
+            }
+            result.add(new ArrayList<>(level));
+            leftToRight = !leftToRight;
+        }
+        return result;
     }
 }
 ```
